# EBFEC

./: CMakeLists.txt  LICENSE  README.md
include/: bitmask.hpp
test/: test.cpp
